# headline-reactor

./: .env.example  .gitignore  BEQS_CSV_EXPORT_GUIDE.md  BUILD_PRODUCTION_CATALOGS.md  CATALOG_BUILDER.md  COMPLETE_SETUP.md  FINAL_SUMMARY.md  GO_LIVE_CHECKLIST.md  OPERATIONAL_RUNBOOK.md  PRODUCTION_READY.md  QUICKSTART.md  README.md  SETUP_TESSERACT.md  START_TRADING.md  TRADEABLE_RULES.md  UNIVERSE_AWARE.md  US_UNIVERSE_PIPELINE.md  V2_ARCHITECTURE.md  WATCH_MODE_GUIDE.md  build_catalogs.py  import_beqs_csv.py  newsreactor.yml  orats_fetch.py  pyproject.toml  seeds_us_major.txt  test_output.txt  universe.yml  universe_v2.yml  us_universe_pipeline.py
catalog/: beqs_securities.parquet  etf_catalog.parquet  secmaster.parquet  stats.parquet  us_universe.parquet  us_universe_with_orats.parquet
data/: name_map.csv
scripts/: merge_orats.py  smoke_e2e.py  start_watch.ps1  universe_guard.py
src/headline_reactor/: __init__.py  capture.py  cli.py  instrument_selector.py  instrument_selector_v2.py  liquidity.py  llm.py  ocr.py  options.py  options2.py  planner.py  planner_v2.py  proxy_engine.py  resolver.py  rules.py  symbology.py  util.py
src/headline_reactor/ops/: __init__.py  metrics.py
src/headline_reactor/orders/: __init__.py  banding.py
src/headline_reactor/safety/: __init__.py  circuits.py  market_gates.py
src/headline_reactor/vendors/: __init__.py  bbg_status.py  orats_client.py
